decompose ec2type and git repo
